# spock-auth-example

./: LICENSE  README.md  spock-auth-example.cabal  stack.yaml
src/: Main.hs
