name:                spock-auth-example
version:             0.1.0.0
synopsis:            Example project demonstrating type-level authentication & authorization with the Spock web framework
description:         Example project demonstrating type-level authentication & authorization with the Spock web framework
homepage:            https://gitlab.com/joncfoo/spock-auth-example
license:             ISC
license-file:        LICENSE
author:              Jonathan Curran
maintainer:          joncfoo@gmail.com
copyright:           2016 Jonathan Curran
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable spock-auth-example
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock
                     , hvect
                     , http-types
  default-language:    Haskell2010
